# GPCVideoRecorder

./: .gitignore  .gitmodules  CMakeLists.txt  libGPCVideoRecorder-config-version.cmake.in  libGPCVideoRecorder-config.cmake.in
docs/: log.txt
include/gpc/: VideoRecorder.hpp
mingw/: README.txt
src/: VideoRecorder.cpp
